unitas-rs/pattern-macro/tests/compile_fails/invalid_pattern_mask.stderr
error: expected `??` or a two character hex byte
 --> tests/compile_fails/invalid_pattern_mask.rs:4:17
  |
4 |     pattern!(0, "?");
  |                 ^^^
